slight change in order of slides

--- a/cmlths2018-talk/cmlhts2018-talk.ipynb
+++ b/cmlths2018-talk/cmlhts2018-talk.ipynb
@@ -25,14 +25,27 @@
     }
    },
    "source": [
-    "### Markup\n",
+    "### Markup - theory\n",
     " Expectations, challenges  \n",
     " Requirements\n",
-    "### Method\n",
-    "   Implementation: TAGML  \n",
+    "### Markup - practice\n",
+    "   TAGML  \n",
     "   Workflow    \n",
     "### Conclusion\n",
     "### Discussion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "source": [
+    "In order to computationally model text, we need to have a definition that is both very precise and inclusive and takes into account all textual features that textual scholars are interested in.\n",
+    "\n",
+    "\"Text\" has been defined over and over again (see all the publications about \"what text is, really\") but we propose the following, informational definition:"
    ]
   },
   {
@@ -65,7 +78,67 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "source": [
+    "We'll keep this definition of text in the back of our mind and first look at the reasons why we would markup a textual object."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "Markup allows scholars to reify their notions and assumptions about a text object."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "Markup is applied from a certain perspective on the text"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "\"Analytical perspectives on text\" (Renear _et al_. 1993):\n",
+    "\n",
+    "- dramatic:\n",
+    "- prosodic:\n",
+    "- syntactic: \n",
+    "- etc..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "source": [
+    "However markup is not only applied to describe (an interpretation of) a text. In addition to an intellectual, abstract intention it is also applied with a practical intention: to ensure that transcription is processable by software."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -87,7 +160,29 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "A \"shared conception of digital editing\" (Hajo 2010) is abandoned in favor of idiosyncratic approaches  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "A strict formal observation and with it a description of a text is a **physical impossibility**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -163,87 +258,6 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Summary\n",
-    "\n",
-    "1. Overlap\n",
-    "2. Discontinuity\n",
-    "3. Non-linearity\n",
-    "4. Compatible  \n",
-    "    a. Interoperable  \n",
-    "    b. Reusable\n",
-    "    \n",
-    "\"Natural\" or idiomatic: the model needs to be close to our understanding of text"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Method\n",
-    "A \"shared conception of digital editing\" (Hajo 2010) is abandoned in favor of idiosyncratic approaches  \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "Editors apply markup from a certain perspective on the text: they reify their notions and assumptions."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "\"Analytical perspectives on text\" (Renear _et al_. 1993):\n",
-    "\n",
-    "- dramatic:\n",
-    "- prosodic:\n",
-    "- syntactic: \n",
-    "- etc..."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "A strict formal observation and with it a description of a text is a **physical impossibility**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "notes"
-    }
-   },
-   "source": [
-    "However markup is not only applied to describe (an interpretation of) a text. In addition to an intellectual, abstract intention it is also applied with a practical intention: to ensure that transcription is processable by software."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
      "slide_type": "notes"
     }
    },
@@ -260,7 +274,7 @@
    },
    "source": [
     "# Markup allows us to ...\n",
-    "### ... formally describe our interpretation of text "
+    "#### ... formally describe our interpretation of text "
    ]
   },
   {
@@ -271,7 +285,7 @@
     }
    },
    "source": [
-    "### ... create transcriptions that can be processed by software"
+    "#### ... create transcriptions that can be processed by software"
    ]
   },
   {
@@ -282,7 +296,7 @@
     }
    },
    "source": [
-    "### ... reify our assumptions about the best ways to describe textual features"
+    "#### ... reify our assumptions about the best ways to describe textual features"
    ]
   },
   {
@@ -658,21 +672,54 @@
     }
    },
    "source": [
-    "# Conclusion\n",
-    "\n",
-    "### Text is a multilayered, non-linear object\n",
-    "### The information can be ordered, partially ordered, or unordered "
+    "# Conclusion"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     }
    },
    "source": [
-    "### TAGML allows for the formal description of textual features"
+    "# Text\n",
+    "\n",
+    "- Text is a multilayered, non-linear object\n",
+    "- The information can be ordered, partially ordered, or unordered "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "# Markup\n",
+    "\n",
+    "1. Overlap\n",
+    "2. Discontinuity\n",
+    "3. Non-linearity\n",
+    "4. Compatible  \n",
+    "    a. Interoperable  \n",
+    "    b. Reusable\n",
+    "    \n",
+    "\"Natural\" or idiomatic: the model needs to be close to our understanding of text"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "# TAGML \n",
+    "\n",
+    "... allows for the formal description of textual features"
    ]
   },
   {
