minor changes to slides

--- a/cmlths2018-talk/cmlhts2018-talk.ipynb
+++ b/cmlths2018-talk/cmlhts2018-talk.ipynb
@@ -8,13 +8,14 @@
     }
    },
    "source": [
-    "<h2 align=\"center\">Perspectives on Text</h2>\n",
+    "<div align=\"center\"><h2>Perspectives on Text</h2>\n",
     "<br/>\n",
-    "<h3 align=\"center\">_Synthesizing knowledge through markup_</h3>\n",
+    "<h3>_Synthesizing knowledge through markup_</h3>\n",
     "<br/>\n",
-    "<h4 align=\"center\">Elli Bleeker, Bram Buitendijk, Ronald Haentjens Dekker, Astrid Kulsdom\n",
-    "<br/>R&D Digital Infrastructure - KNAW</h4>\n",
-    "<br/><h5>Leicester, July 4, 2018</h5>"
+    "<h4>Elli Bleeker, Bram Buitendijk, Ronald Haentjens Dekker, Astrid Kulsdom</h4>\n",
+    "<h5>R&amp;D - Dutch Royal Academy of Arts and Science</h5>\n",
+    "</div>\n",
+    "     "
    ]
   },
   {
@@ -45,7 +46,7 @@
    "source": [
     "In order to computationally model text, we need to have a definition that is both very precise and inclusive and takes into account all textual features that textual scholars are interested in.\n",
     "\n",
-    "\"Text\" has been defined over and over again (see all the publications about \"what text is, really\") but we propose the following, informational definition:"
+    "\"Text\" has been defined over and over again (see all the publications about \"what text is, really\") but we propose the following, informationally inclusive definition:"
    ]
   },
   {
@@ -69,9 +70,7 @@
     }
    },
    "source": [
-    "# Markup challenges\n",
-    "\n",
-    "\n"
+    "# Markup theory"
    ]
   },
   {
@@ -82,7 +81,9 @@
     }
    },
    "source": [
-    "We'll keep this definition of text in the back of our mind and first look at the reasons why we would markup a textual object."
+    "We'll keep this definition of text in the back of our mind and first look at the reasons why we would markup a textual object. \n",
+    "\n",
+    "Making a transcription is building a model. A model is a formal embodiment of our assumptions."
    ]
   },
   {
@@ -94,33 +95,6 @@
    },
    "source": [
     "Markup allows scholars to reify their notions and assumptions about a text object."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "Markup is applied from a certain perspective on the text"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "\"Analytical perspectives on text\" (Renear _et al_. 1993):\n",
-    "\n",
-    "- dramatic:\n",
-    "- prosodic:\n",
-    "- syntactic: \n",
-    "- etc..."
    ]
   },
   {
@@ -182,6 +156,17 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "Markup is applied from a certain perspective on the text"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "slide"
     }
    },
@@ -197,7 +182,23 @@
     }
    },
    "source": [
-    "# Examples \n",
+    "\"Analytical perspectives on text\" (Renear _et al_. 1993):\n",
+    "\n",
+    "- dramatic: act, scene, stage directions, speech\n",
+    "- poetic: poem, verse, stanza, quatrain, couplet, line, half-line, foot\n",
+    "- syntactic: sentence, noun phrase, verb phrase, determiner, adjective, noun, verb\n",
+    "- etc..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Modeling textual features \n",
     "\n",
     "- Overlapping structures  \n",
     "- Discontinuous elements  \n",
@@ -226,8 +227,19 @@
    },
    "source": [
     "# Discontinuous elements\n",
-    "<img width=\"300\" height=\"300\" src=\"images/order.jpg\">\n",
-    "\n"
+    "\n",
+    "\"And what is the use of a book\", thought Alice, \"without pictures or conversation?\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "<img width=\"300\" height=\"300\" src=\"images/order.jpg\">"
    ]
   },
   {
@@ -262,7 +274,7 @@
     }
    },
    "source": [
-    "So, in summary we can say the following of markup:"
+    "Theoretically, markup is an indispensable instrument:"
    ]
   },
   {
