minor changes in talk; added image of discontinuity

--- a/cmlths2018-talk/cmlhts2018-talk.ipynb
+++ b/cmlths2018-talk/cmlhts2018-talk.ipynb
@@ -22,13 +22,25 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "source": [
+    "This talk is not a simple \"me and my project\"-presentation. Instead I'd like to the topic of computational text modeling by focusing on one instrument: markup.\n",
+    "\n",
+    "Markup is cool! It is an instrument to express our understanding of a text to a computer so we can probe that text further, have others probe it, store it and represent it."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "subslide"
     }
    },
    "source": [
     "### Markup - theory\n",
     " Expectations, challenges  \n",
-    " Requirements\n",
     "### Markup - practice\n",
     "   TAGML  \n",
     "   Workflow    \n",
@@ -40,37 +52,11 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "notes"
-    }
-   },
-   "source": [
-    "In order to computationally model text, we need to have a definition that is both very precise and inclusive and takes into account all textual features that textual scholars are interested in.\n",
-    "\n",
-    "\"Text\" has been defined over and over again (see all the publications about \"what text is, really\") but we propose the following, informationally inclusive definition:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
      "slide_type": "slide"
     }
    },
    "source": [
-    "# What is text?\n",
-    "\n",
-    "A multilayered, non-linear object containing information which is at times ordered, partially ordered, or unordered"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Markup theory"
+    "# Theory"
    ]
   },
   {
@@ -81,9 +67,7 @@
     }
    },
    "source": [
-    "We'll keep this definition of text in the back of our mind and first look at the reasons why we would markup a textual object. \n",
-    "\n",
-    "Making a transcription is building a model. A model is a formal embodiment of our assumptions."
+    "Aims and potential of markup is twofold:   "
    ]
   },
   {
@@ -94,7 +78,8 @@
     }
    },
    "source": [
-    "Markup allows scholars to reify their notions and assumptions about a text object."
+    "- Markup helps us to **make explicit implicit notions and interpretations**\n",
+    "- Markup **unites scholarly knowledge** "
    ]
   },
   {
@@ -105,7 +90,94 @@
     }
    },
    "source": [
-    "However markup is not only applied to describe (an interpretation of) a text. In addition to an intellectual, abstract intention it is also applied with a practical intention: to ensure that transcription is processable by software."
+    "Let's start with the first point. The moment I mention hierarchies, your mind will automatically spring to \"overlap\". \n",
+    "\n",
+    "Indeed, we can make explicit our understanding of text but the moment we structure a textual object a certain way, there'll be many elements that do not fit into that structure. The easiest example is that of:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "source": [
+    "I don't have to tell you that these promises are not, at least not entirely, fulfilled. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "source": [
+    "Current markup technology do not permit us to do so, or better: they don't facilitate it in a straightforward manner. \n",
+    "- Simple texts do fit into one hierarchy, but the moment one wants to tag more complex phenomena one has to resort to workarounds. Which work, but they do remain workarounds.\n",
+    "- Transcriptions are usually made on a project basis / idiosyncratic approaches. No shared conception of digital editing. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Logical structure vs. document structure "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "<img src=\"images/Selection-21v.png\">\n",
+    "<img src=\"images/Selection-22v.png\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "source": [
+    "There are, of course, an infinite amount of structures, as illustrated by the long list of analytical perspectives on text by Allan Renear _et al_. Each of these perspectives implies a different structuring and ordering of the text."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "\"Analytical perspectives on text\" (Renear _et al_. 1993):\n",
+    "\n",
+    "- dramatic: act, scene, stage directions, speech\n",
+    "- poetic: poem, verse, stanza, quatrain, couplet, line, half-line, foot\n",
+    "- syntactic: sentence, noun phrase, verb phrase, determiner, adjective, noun, verb\n",
+    "- etc..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "source": [
+    "The second point, bringing together scholarly knowledge in one file that can be used and reused by others, has also been proven quite unfeasible by our diverging scholarly practices."
    ]
   },
   {
@@ -127,29 +199,18 @@
     }
    },
    "source": [
-    "<div class=\"quote\" align=\"center\" font=\"12pt\">_\"A transcription at its most basic is mediated or subject to mediation\"_</div> <br/><div class=\"source\" align=\"center\">(Shillingsburg 2014)</div>"
+    "<div align=\"center\">A \"_shared conception of digital editing_\" (Hajo 2010) is abandoned in favor of idiosyncratic approaches</div>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "notes"
     }
    },
    "source": [
-    "A \"shared conception of digital editing\" (Hajo 2010) is abandoned in favor of idiosyncratic approaches  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "A strict formal observation and with it a description of a text is a **physical impossibility**"
+    "This has led Erwin Palofsky to conclude, early on, that:"
    ]
   },
   {
@@ -160,34 +221,44 @@
     }
    },
    "source": [
-    "Markup is applied from a certain perspective on the text"
+    "<div align=\"center\">A strict formal observation and with it a description of a text is a _physical impossibility_</div>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "notes"
     }
    },
    "source": [
-    "Logical structure vs. document structure "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "\"Analytical perspectives on text\" (Renear _et al_. 1993):\n",
+    "Before we go on, let's take a closer look at what we're dealing with, exactly. As this is the Computational Methods for Literary-Historical Textual Scholarship, I assume we are primarily working with textual objects.\n",
     "\n",
-    "- dramatic: act, scene, stage directions, speech\n",
-    "- poetic: poem, verse, stanza, quatrain, couplet, line, half-line, foot\n",
-    "- syntactic: sentence, noun phrase, verb phrase, determiner, adjective, noun, verb\n",
-    "- etc..."
+    "\"Text\" has been defined over and over again (see all the publications about \"what text is, really\") but we propose the following definition that is both very precise and inclusive and takes into account all textual features that textual scholars are interested in."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# What is text?\n",
+    "\n",
+    "A multilayered, non-linear object containing information which is at times ordered, partially ordered, or unordered"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "source": [
+    "I'll give three examples of textual features and how they translate informationally."
    ]
   },
   {
@@ -228,7 +299,7 @@
    "source": [
     "# Discontinuous elements\n",
     "\n",
-    "\"And what is the use of a book\", thought Alice, \"without pictures or conversation?\""
+    "<img width=\"900\" height=\"500\" src=\"images/discontinuity.png\">"
    ]
   },
   {
@@ -297,18 +368,7 @@
     }
    },
    "source": [
-    "#### ... create transcriptions that can be processed by software"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "#### ... reify our assumptions about the best ways to describe textual features"
+    "#### ... create transcriptions that can be shared with others and processed by software"
    ]
   },
   {
@@ -364,7 +424,7 @@
     }
    },
    "source": [
-    "The affordances and limitations of a textual model influence our understanding of text"
+    "<div align=\"center\"> The affordances and limitations of a textual model influence our understanding of text</div>"
    ]
   },
   {
@@ -375,9 +435,22 @@
     }
    },
    "source": [
-    "So what happens if we step outside the framework we've all come know, and start all over again? What if we're no longer compelled to think in terms of monohierarchical structures when modeling text and instead take as point departure a model that provides *native* support for multiple hierarchies, without complicated hacks and workarounds? How would we then markup a text? \n",
+    "So what happens if we step outside the framework we've all come know, and start all over again? What if we're no longer compelled to think in terms of monohierarchical structures when modeling text and instead take as point departure a model that provides *native* support for multiple hierarchies, without complicated hacks and workarounds? How would we then markup a text? "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "source": [
+    "In the second part of my talk, I'll introduce TAGML, the markup language we've been developing over the past few months. TAGML is based on the definition of text as a multilayered, non-linear object and addresses in a straightforward manner complex textual features like those I just described.\n",
     "\n",
-    "Over the past months we've been working on a markup language for an advanced model of text. The technological possibilities offered by this model also prompt novelintellectual questions, some of which I'll discuss today."
+    "Furthermore, we have developed a system to manage TAGML files and address both the issues of compatibility and interoperability.\n",
+    "\n",
+    "First, TAGML."
    ]
   },
   {
@@ -391,7 +464,7 @@
     "# TAGML\n",
     "Markup language of Text-as-Graph (TAG) model  \n",
     "\n",
-    "Follows the definition of **text as a non-linear and multilayered information object**."
+    "Considers **text** to be **a non-linear and multilayered information object**."
    ]
   },
   {
@@ -404,7 +477,7 @@
    "source": [
     "A TAGML file can have multiple **layers**.  \n",
     "\n",
-    "A layer is a set of markup nodes. A layer is hierarchical."
+    "A layer is, in principle, a set of markup nodes. A layer is hierarchical."
    ]
   },
   {
@@ -415,7 +488,10 @@
     }
    },
    "source": [
-    "How does that help us? Although all editing efforts need to start with a formal description of the method and the underlying model of text, editors will rarely stick to one of the analytical perspectives outlined by Allen Renear _et al_. Let's go back to the overlap-example I showed previously. Imagine transcribing the poetic structure of the text on this document fragment."
+    "How does that help us? \n",
+    "\n",
+    "Let's focus on one of the textual features I just outlined, the most familiar one: overlapping structures. \n",
+    "Imagine transcribing the poetic structure of the text on this document fragment."
    ]
   },
   {
@@ -440,42 +516,18 @@
    "source": [
     "```\n",
     "[tagml>\n",
-    "     [poem>\n",
-    "      [speaker who=\"springs\">2d. Voice from the Springs<speaker]\n",
-    "          [sp>\n",
-    "          [l>Thunderbolts had parched our water<l]\n",
-    "          [l>We had been stained with bitter blood<l]\n",
-    "          [l>And had ran mute 'mid shrieks of slaughter<l]\n",
-    "          [l>Thro' a city & a solitude!<l]\n",
-    "          <sp]\n",
-    "      <poem]\n",
-    " <tagml]```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "```\n",
-    "[tagml>\n",
-    "    [page n=\"21v\">\n",
-    "    ...\n",
+    "    [page>\n",
     "      [p>\n",
     "        [line>2d. Voice from the Springs<line]\n",
     "        [line>Thunderbolts had parched our water<line]\n",
     "        [line>We had been stained with bitter blood<line]\n",
     "      <p]\n",
     "    <page]\n",
-    "    [page n\"22v>\n",
+    "    [page>\n",
     "      [p>\n",
-    "        [line>And had ran mute 'mid shrieks of <|[sic>slaugter<sic]|[corr>slaughter<corr]|><line]\n",
+    "        [line>And had ran mute 'mid shrieks of [sic>slaugter<sic]><line]\n",
     "        [line>Thro' a city & a solitude!<line]\n",
     "      <p]\n",
-    "     ...\n",
     "    <page]\n",
     "<tagml]\n",
     "```\n",
@@ -490,7 +542,7 @@
     }
    },
    "source": [
-    "Let's take a closer look at that last transcription. One could argue that the paragraph isn't really \"closed\", it just needs to be closed to avoid overlap with the page element. If that weren't necessary, the transcription may look like this:"
+    "Let's take a closer look at that last transcription. One could argue that the paragraph isn't really \"closed\", it just needs to be closed to avoid overlap with the page element. If that weren't necessary, this would be a more intuitive transcription:"
    ]
   },
   {
@@ -535,7 +587,7 @@
     }
    },
    "source": [
-    "The moment structures overlap, the user can create a layer. A layer can be created locally. The layers may be given any name; in this example they are simply referred to as layer A and layer B."
+    "This is where the multilayeredness comes in. The moment structures overlap, the user can create a new layer. A layer can be created locally. The layers may be given any name; in this example they are simply referred to as layer A and layer B."
    ]
   },
   {
@@ -559,6 +611,20 @@
     "    <p|B]\n",
     "<page|A]\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# _Alexandria_\n",
+    "\n",
+    "- Text repository for TAGML files\n",
+    "- Git-like version management\n"
    ]
   },
   {
@@ -732,6 +798,18 @@
     "# TAGML \n",
     "\n",
     "... allows for the formal description of textual features"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "# Alexandria\n",
+    "... allows for the storage and management of multilayered TAGML files"
    ]
   },
   {
